[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-tasks"
version = "0.1.0"
description = "A lightweight CLI task manager for project work."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.scripts]
pm-tasks = "pm_tasks.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["pm_tasks"]
